--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lnu/eslint-config": "^1.1.10",
     "eslint": "^8.49.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.8.0"
-}
+    "eslint-plugin-jsdoc": "^46.8.2",
+    "jest": "^29.7.0"
+  }
 }
